# literature-review

./: .gitignore  README.md  clinical_trials.db  pyproject.toml  sample.json  sample_study.json  schema.json
files/: field_to_piece.json  fields.txt  sample.json  sample_processed.json  sample_processed_study.json  sample_raw.json  schema.json  schema_lean.json  structure.json  study.json  test.json  test2.json  useful_fields.txt
litreview/: __init__.py  clinical_trials.py  clinical_trials_api.py  database.py  encoders.py  studies.py  utils.py
notebooks/: 00-nlp-notes.ipynb  01-summary-stats.ipynb  02-embeddings.ipynb  02-encodings.ipynb  03-clustering.ipynb  03-vector-database.ipynb
scripts/: connect_to_mssql.py  create_db.py  find_missing_fields.py  heroku_test.py  print_fields.py  query_heroku_db.py  sample_processed_study.py  sample_query.py  test.py  test.sql  update_db.py  update_db.sql  update_heroku_db.py  update_lean_db.py  update_postgres_db.py
tests/: test_clinical_trials_api.py  test_studies.py
