[tool.poetry]
name = "litreview"
version = "0.1.0"
description = "Automated literature review with clinical trials."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
missingno = "^0.5.2"
pandas = "^2.2.2"
pytest = "^8.2.2"
tqdm = "^4.66.4"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
