[tool.poetry]
name = "litreview"
version = "0.1.0"
description = "Automated literature review with clinical trials."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
missingno = "^0.5.2"
pandas = "^2.2.2"
pytest = "^8.2.2"
tqdm = "^4.66.4"
transformers = "^4.43.3"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
scipy = "^1.14.0"
bertopic = "^0.16.3"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
